Working on container overview

--- a/index.html
+++ b/index.html
@@ -36,16 +36,14 @@
 
     </div>
 </nav>
-
+<br/>
+<br/>
+<br/>
+<br/>
 
 <div ng-view class="container"></div>
 
-<footer class="footer">
-    <div class="container">
-        <p class="text-muted" align="center"><a href="#/news">Hírek: 0</a> | <a href="#/events">Események: 0</a> | <a href="#/messages">Üzenetek: 0</a> | Idő:
-            yyyy.MM.dd hh:ss:mm | Körváltásig hátralévő idő: mm:ss</p>
-    </div>
-</footer>
+
 <!---->
 <script src="assets/libs/jquery/dist/jquery.js"></script>
 <script src="assets/libs/bootstrap/dist/js/bootstrap.js"></script>
@@ -57,5 +55,8 @@
 <script src="app/app.modules.js"></script>
 <script src="app/shared/services.js"></script>
 <!---->
+<script src="app/containers/containers.js"></script>
+<script src="app/containerDetails/containerDetails.js"></script>
+<script src="app/images/images.js"></script>
 </body>
 </html>
