--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -2,8 +2,11 @@
 
     <div id="main-wrapper" class="col-md-12 pull-right">
         <div id="main">
-            <div class="col-md=12">Container details</div>
-            <div class="col-md=12">Hostname: {Config.Hostname}$</div>
+            <div class="col-md=12">Container details:</div>
+            <div class="col-md=12">Hostname: {{containerDetails.Config.Hostname}}</div>
+            <div class="col-md=12">Name: {{containerDetails.Name}}</div>
+            <div class="col-md=12">Image: {{containerDetails.Config.Image}}</div>
+            <div class="col-md=12">Created: {{containerDetails.Created}}</div>
         </div>
     </div>
 </div>
