--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/">Docker|mon</a>
+            <a class="navbar-brand" href="#/containers">Docker|mon</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -25,9 +25,7 @@
             </ul>
 
             <ul class="nav navbar-nav pull-right">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">Help</a></li>
-                </ul>
+                <li><a href="#">Help</a></li>
             </ul>
 
 
@@ -58,5 +56,6 @@
 <script src="app/containers/containers.js"></script>
 <script src="app/containerDetails/containerDetails.js"></script>
 <script src="app/images/images.js"></script>
+<script src="app/imageDetails/imageDetails.js"></script>
 </body>
 </html>
