Started working on hosts

--- a/app/imageDetails/imageDetails.html
+++ b/app/imageDetails/imageDetails.html
@@ -4,6 +4,7 @@
         <div id="main">
             <div class="col-md=12">Image details:</div>
             <div class="col-md=12">Image Id: {{imageDetails.Id}}</div>
+            <div class="col-md=12">Author: {{imageDetails.Author}}</div>
         </div>
     </div>
 </div>
