--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
+                <li><a class="active" href="#/hosts">Hosts</a></li>
                 <li><a class="active" href="#/containers">Containers</a></li>
                 <li><a href="#/images">Images</a></li>
             </ul>
@@ -53,6 +54,7 @@
 <script src="app/app.modules.js"></script>
 <script src="app/shared/services.js"></script>
 <!---->
+<script src="app/hosts/hosts.js"></script>
 <script src="app/containers/containers.js"></script>
 <script src="app/containerDetails/containerDetails.js"></script>
 <script src="app/images/images.js"></script>
