--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/containers">Docker|mon</a>
+            <a class="navbar-brand" href="#/hostDetails">Docker|mon</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -55,6 +55,7 @@
 <script src="app/shared/services.js"></script>
 <!---->
 <script src="app/hosts/hosts.js"></script>
+<script src="app/hostDetails/hostDetails.js"></script>
 <script src="app/containers/containers.js"></script>
 <script src="app/containerDetails/containerDetails.js"></script>
 <script src="app/images/images.js"></script>
