Adding background ticking.

--- a/app/hosts/hosts.html
+++ b/app/hosts/hosts.html
@@ -2,6 +2,21 @@
 
     <div id="main-wrapper" class="col-md-12 pull-right">
         <div id="main">
+            <div class="row">
+                <div class="col-md-4">
+                    <input type="text" size="45">
+                </div>
+                <div class="col-md-1">
+                    <button class="btn btn-info">Add</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-1">&nbsp;</div>
+
+
+            </div>
+
+
             <table class="table table-condensed table-bordered">
                 <tr class="success">
                     <td colspan="8" align="center">Hosts data</td>
