--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -5,7 +5,7 @@
             <form name="constructionForm" novalidate>
                 <table class="table table-condensed table-bordered">
                     <tr class="success">
-                        <td colspan="8" align="center">Containers on {{$root.host}}</td>
+                        <td colspan="8" align="center">Containers on {{$root.hostUrl}}</td>
                     </tr>
 
                     <tr>
