Renaming host to hostUrl in global scope

--- a/app/images/images.html
+++ b/app/images/images.html
@@ -5,7 +5,7 @@
             <form name="constructionForm" novalidate>
                 <table class="table table-condensed table-bordered">
                     <tr class="success">
-                        <td colspan="8" align="center">Images on {{$root.host}}</td>
+                        <td colspan="8" align="center">Images on {{$root.hostUrl}}</td>
                     </tr>
 
                     <tr>
